Origin to geometry, to cursor, to center of mass, etc with bones make Blender crashing #56500

Closed
opened 2018-08-22 18:26:23 +02:00 by Antoine · 8 comments

System Information
Windows 10 x64
Radeon HD 7900 series

Blender Version
Broken: 2.8 7eaf00bfb0

Short description of error
If you use any origin to geometry, center of mass, and all the others on bones, Blender crash

Exact steps for others to reproduce the error (I don't paste a .blend file because it's very quick to reproduce the error ( less than 30 sc)
1-Create a signle bone
2-In object mode go to the Object menue
3-In Object menue go to transform, then apply any "origin to geometry, center of mass, cursor you want

**System Information** Windows 10 x64 Radeon HD 7900 series **Blender Version** Broken: 2.8 7eaf00bfb09 **Short description of error** If you use any origin to geometry, center of mass, and all the others on bones, Blender crash **Exact steps for others to reproduce the error** (I don't paste a .blend file because it's very quick to reproduce the error ( less than 30 sc) 1-Create a signle bone 2-In object mode go to the Object menue 3-In Object menue go to transform, then apply any "origin to geometry, center of mass, cursor you want
Author

Added subscriber: @Martantoine

Added subscriber: @Martantoine

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Confirmed.

Assert: //source/blender/blenkernel/intern/mesh_runtime.c:213 in BKE_mesh_batch_cache_dirty
Fullbacktrace: P770

Confirmed. Assert: `//source/blender/blenkernel/intern/mesh_runtime.c:213 in BKE_mesh_batch_cache_dirty` Fullbacktrace: [P770](https://archive.blender.org/developer/P770.txt)

This issue was referenced by 25c918196c

This issue was referenced by 25c918196ce66eff4417d7d2e1d3da8c11d96735
Dalai Felinto self-assigned this 2018-08-22 22:05:29 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

@Sergey what do you think? Added a fix on D3639.
The original code is big time wrong, assuming all the objects are meshes, and that objects necessarily have a ob->data.

@Sergey what do you think? Added a fix on [D3639](https://archive.blender.org/developer/D3639). The original code is big time wrong, assuming all the objects are meshes, and that objects necessarily have a ob->data.

And for the records, for the original operator (origin, ...) the crash can be avoided by simply removing the BKE_mesh_batch_cache_dirty line altogether.

And for the records, for the original operator (origin, ...) the crash can be avoided by simply removing the `BKE_mesh_batch_cache_dirty` line altogether.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56500
No description provided.