Fix T56500: Origin to geometry crashes on armature

Reviewers: sergey

https://developer.blender.org/D3639